fix(sass): adjust margin-left of ul & ol so it's aligned with content
And fallback to px if browser missing rem support

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,7 +83,8 @@ figcaption {
 ul,
 ol {
   list-style-position: outside;
-  margin-left: 2.3rem;
+  margin-left: 22px;
+  margin-left: 2.2rem;
 }
 
 ul {
